<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="@string/settings_cluster_basics">
        <Preference
            app:icon="@drawable/ic_action_settings"
            app:fragment="com.alzimerahmed.oasisbrowser.settings.fragment.GeneralSettingsFragment"
            app:title="@string/settings_general" />
        <Preference
            app:icon="@drawable/ic_settings_globe"
            app:fragment="com.alzimerahmed.oasisbrowser.settings.fragment.AdvancedSettingsFragment"
            app:summary="@string/settings_advanced_explain"
            app:title="@string/settings_advanced" />
        <Preference
            app:icon="@drawable/ic_settings_privacy"
            app:fragment="com.alzimerahmed.oasisbrowser.settings.fragment.PrivacySettingsFragment"
            app:summary="@string/settings_privacy_explain"
            app:title="@string/settings_privacy" />
        <Preference
            app:icon="@drawable/ic_settings_globe"
            app:fragment="com.alzimerahmed.oasisbrowser.settings.fragment.SitePermissionsSettingsFragment"
            app:summary="@string/settings_site_permissions_summary"
            app:title="@string/settings_site_permissions" />
        <Preference
            app:icon="@drawable/ic_action_star"
            app:fragment="com.alzimerahmed.oasisbrowser.settings.fragment.BookmarkSettingsFragment"
            app:summary="@string/bookmark_settings_summary"
            app:title="@string/bookmark_settings" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/settings_cluster_experience">
        <Preference
            app:icon="@drawable/ic_action_desktop"
            app:fragment="com.alzimerahmed.oasisbrowser.settings.fragment.DisplaySettingsFragment"
            app:summary="@string/settings_graphics_summary"
            app:title="@string/settings_display" />
        <Preference
            app:icon="@drawable/ic_settings_audio"
            app:fragment="com.alzimerahmed.oasisbrowser.settings.fragment.AudioSettingsFragment"
            app:summary="@string/settings_audio_summary"
            app:title="@string/settings_audio" />
        <Preference
            app:icon="@drawable/ic_settings_haptics"
            app:fragment="com.alzimerahmed.oasisbrowser.settings.fragment.HapticsSettingsFragment"
            app:summary="@string/settings_haptics_summary"
            app:title="@string/settings_haptics" />
        <Preference
            app:icon="@drawable/ic_settings_text"
            app:fragment="com.alzimerahmed.oasisbrowser.settings.fragment.AccessibilitySettingsFragment"
            app:summary="@string/settings_accessibility_summary"
            app:title="@string/settings_accessibility" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/settings_cluster_innovative_features">
        <Preference
            app:icon="@drawable/ic_settings_shield"
            app:fragment="com.alzimerahmed.oasisbrowser.settings.fragment.AdBlockSettingsFragment"
            app:summary="@string/settings_adblock_summary"
            app:title="@string/settings_adblock" />
        <Preference
            app:icon="@drawable/ic_settings_malware_horse"
            app:fragment="com.alzimerahmed.oasisbrowser.settings.fragment.VirusTotalSettingsFragment"
            app:summary="@string/malware_scanner_settings_summary"
            app:title="@string/malware_scanner" />
        <Preference
            app:icon="@drawable/ic_settings_privacy"
            app:fragment="com.alzimerahmed.oasisbrowser.settings.fragment.UserScriptsSettingsFragment"
            app:summary="@string/userscripts_explain"
            app:title="@string/userscripts" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/settings_cluster_about">
        <Preference
            app:icon="@drawable/ic_settings_info"
            app:fragment="com.alzimerahmed.oasisbrowser.settings.fragment.AboutSettingsFragment"
            app:summary="@string/settings_about_explain"
            app:title="@string/settings_about" />
        <Preference
            app:icon="@drawable/ic_settings_debug"
            app:fragment="com.alzimerahmed.oasisbrowser.settings.fragment.DebugSettingsFragment"
            app:key="DEBUG"
            app:summary="@string/settings_debug_explain"
            app:title="@string/debug_title" />
    </PreferenceCategory>
</PreferenceScreen>
